[tool.poetry]
name = "photo_export"
version = "0.0.0"
description = "Tool to export photos from the child diary app."
authors = ["Samuel Pedro"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-dotenv = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
